# syncer

./: .envrc  .gitignore  Cargo.toml
.github/workflows/: ci.yaml
data/: input01.txt
proto/: server.proto
query/: create_files_table.sql  create_groups_table.sql
src/: cli.rs  client.rs  context.rs  env.rs  logging.rs  main.rs  server.rs
src/client/: error.rs  proxy.rs
src/server/: db.rs  service.rs
src/server/db/: model.rs
src/util/: mod.rs
