[package]
name = "syncer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "syncer-server"
test = true
bench = false

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
log4rs = "1.2.0"
md5 = { version = "0.7.0" }
prost = "0.12.3"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.10.2"
xdg = "2.5.2"

[build-dependencies]
tonic-build = "0.10"
